--- a/Tareas/Base.lproj/Main.storyboard
+++ b/Tareas/Base.lproj/Main.storyboard
@@ -20,27 +20,31 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="celda" textLabel="3ya-Bg-0G5" detailTextLabel="0wJ-Ks-zZP" style="IBUITableViewCellStyleSubtitle" id="Ie6-lb-kIA">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="55.5"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="celda" textLabel="3ya-Bg-0G5" detailTextLabel="0wJ-Ks-zZP" imageView="a8D-iF-13n" rowHeight="97" style="IBUITableViewCellStyleSubtitle" id="Ie6-lb-kIA">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="97"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ie6-lb-kIA" id="Cy1-uC-HjZ">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="55.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="97"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="3ya-Bg-0G5">
-                                                    <rect key="frame" x="20" y="10" width="33" height="20.5"/>
+                                                    <rect key="frame" x="59" y="28" width="33" height="20.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="0wJ-Ks-zZP">
-                                                    <rect key="frame" x="20" y="31.5" width="44" height="14.5"/>
+                                                    <rect key="frame" x="59" y="51.5" width="44" height="14.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" image="square.and.arrow.up.fill" catalog="system" id="a8D-iF-13n">
+                                                    <rect key="frame" x="22.5" y="37.5" width="19" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </imageView>
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -130,6 +134,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="fechaTareaPicker" destination="fSX-67-eFn" id="xhe-bm-cvE"/>
+                        <outlet property="nuevoImage" destination="ydd-sP-ta1" id="bBx-Dk-ego"/>
                         <outlet property="textoTareaTxtF" destination="exu-Ow-VvX" id="zS7-oq-FjQ"/>
                     </connections>
                 </viewController>
@@ -207,6 +212,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="EDITAR" id="V2P-hv-gaf"/>
                     <connections>
+                        <outlet property="editarImage" destination="v3D-gF-c2c" id="fmA-L1-yPu"/>
                         <outlet property="fechaElemento" destination="kss-j0-HdZ" id="nRH-D4-WdF"/>
                         <outlet property="tituloElemento" destination="qgf-at-33G" id="suv-ur-jJ6"/>
                     </connections>
@@ -238,6 +244,7 @@
         <image name="doc.fill" catalog="system" width="115" height="128"/>
         <image name="doc.fill.badge.plus" catalog="system" width="122" height="128"/>
         <image name="square.and.arrow.down.fill" catalog="system" width="121" height="128"/>
+        <image name="square.and.arrow.up.fill" catalog="system" width="115" height="128"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
